boreal/tests/assets/invalid_files/compilation/regex_error2.yar
rule a {
    condition:
        /.{1,999999}/
}
